--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="saved_fragment">Saved fragment</string>
     <string name="news_headlines">News Headlines</string>
     <string name="saved_news">Saved News</string>
+    <string name="new_heading">New Heading</string>
+    <string name="todo">TODO</string>
 </resources>
